--- a/manifest.json
+++ b/manifest.json
@@ -1,42 +1,38 @@
 {
   "manifest_version": 3,
   "name": "Clipboard Team Sync",
-  "version": "1.0",
-  "description": "A Chrome extension for real-time clipboard sharing among team members.",
+  "description": "Clipboard Team Sync allows users to seamlessly copy, paste, save, & share clipboard items in real-time with the entire team.",
+  "version": "1.0.0",
   "permissions": [
-    "clipboardRead",
-    "clipboardWrite",
     "storage",
-    "tabs",
-    "activeTab"
+    "notifications",
+    "contextMenus",
+    "clipboardRead",
+    "clipboardWrite"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "src/background.js",
+    "type": "module"
   },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "src/popup/popup.html",
     "default_icon": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     }
   },
-  "options_page": "options.html",
+  "options_page": "src/options/options.html",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
-    }
-  ],
-  "icons": {
-    "16": "images/icon16.png",
-    "48": "images/icon48.png",
-    "128": "images/icon128.png"
-  },
-  "web_accessible_resources": [
-    {
-      "resources": ["images/*"],
-      "matches": ["<all_urls>"]
+      "js": ["src/content.js"],
+      "run_at": "document_end"
     }
   ]
 }
